Update travis configuration and use covered for coverage.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,17 @@
 language: ruby
-sudo: false
-dist: trusty
+dist: xenial
 cache: bundler
-rvm:
-  - 2.1
-  - 2.2
-  - 2.3
-  - 2.4
-  - ruby-head
-  - jruby-head
-matrix:
-  allow_failures:
-    - rvm: "ruby-head"
-    - rvm: "jruby-head"
+
 addons:
   apt:
     packages:
       - graphviz
+
+matrix:
+  include:
+    - rvm: 2.3
+    - rvm: 2.4
+    - rvm: 2.5
+    - rvm: 2.6
+    - rvm: 2.6
+      env: COVERAGE=BriefSummary,Coveralls
